# sage

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  justfile
crates/sage-core/: Cargo.toml
crates/sage-core/migrations/00000000000000_create_messages/: up.sql
crates/sage-core/migrations/2026-01-25-031714-0000_create_preferences/: up.sql
crates/sage-core/migrations/2026-01-26-225415-0000_create_scheduled_tasks/: up.sql
crates/sage-core/migrations/2026-02-05-000000_add_attachment_text/: up.sql
crates/sage-core/migrations/2026-04-12-000001_create_enclave_web_tables/: down.sql  up.sql
crates/sage-core/migrations/2026-05-24-000002_add_web_session_titles/: down.sql  up.sql
crates/sage-core/migrations/20260123000005_alter_messages_uuid/: up.sql
crates/sage-core/migrations/20260123000006_add_agent_foreign_keys/: down.sql  up.sql
crates/sage-core/src/: agent_manager.rs  config.rs  lib.rs  main.rs  sage_agent.rs  schema.rs  web_runtime.rs
crates/sage-core/src/memory/: README.md  db.rs  embedding.rs  recall_new.rs
docs/: SAGE_V2_DESIGN.md  architecture.md  brainstorm.md  decisions.md  roadmap.md
scripts/: smoke_tinfoil.sh  test_chat_stream.sh
