[workspace]
resolver = "2"
members = [
    "crates/sage-core",
    "crates/sage-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Agent framework
rig-core = "0.27"

# DSPy in Rust (for structured prompting and GEPA optimization)
# https://github.com/krypticmouse/DSRs
dspy-rs = { git = "https://github.com/krypticmouse/DSRs.git" }
baml-bridge = { git = "https://github.com/krypticmouse/DSRs.git", features = ["derive"] }

# Web framework (for webhooks, health checks)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
futures-util = "0.3"

# Encoding
base64 = "0.22"

# Database
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.2"
pgvector = { version = "0.4", features = ["diesel"] }

# Redis/Valkey
redis = { version = "0.27", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
