[package]
name = "sage-core"
version.workspace = true
edition.workspace = true
default-run = "sage"

[lib]
name = "sage_core"
path = "src/lib.rs"

[[bin]]
name = "sage"
path = "src/main.rs"

[[bin]]
name = "gepa-optimize"
path = "src/bin/gepa_optimize.rs"

[[bin]]
name = "enclave_web"
path = "src/bin/enclave_web.rs"

[dependencies]
sage-tools = { path = "../sage-tools" }
async-trait = "0.1"
dspy-rs.workspace = true
baml-bridge.workspace = true

tokio.workspace = true
# Note: rig-core is used internally by dspy-rs, we don't need it directly
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
pgvector.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
uuid.workspace = true
dotenvy.workspace = true
socket2 = "0.5"
libc = "0.2"

[dev-dependencies]
tokio-test.workspace = true
